--- a/package.json
+++ b/package.json
@@ -20,19 +20,13 @@
     "url": "https://github.com/lxj/generator-fep"
   },
   "scripts": {
-    "test": "mocha"
   },
   "dependencies": {
-    "chalk": "^0.5.1",
-    "github": "^0.2.1",
     "npm-name": "^1.0.1",
     "superb": "^1.0.0",
-    "yeoman-generator": "^0.17.3",
-    "yosay": "^1.0.0"
+    "yeoman-generator": "^0.17.3"
   },
   "devDependencies": {
-    "mocha": "^1.21.4",
-    "mockery": "^1.4.0"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
